libsoy/vapi/ode-0.11.vapi


            [CCode (cname = "dJointGetAMotorParam")]
            public Real GetParam (int parameter);

            [CCode (cname = "dJointGetAMotorMode")]
            public int GetMode ( );
        }

        [Compact]
        [CCode (cname="struct dxJoint", free_function="dJointDestroy")]
        public class LMotor : Joint {
            [CCode (cname = "dJointCreateLMotor")]
            public LMotor (World world, JointGroup? group);

            [CCode (cname = "dJointSetLMotorNumAxes")]
            public void SetNumAxes (int num);

            [CCode (cname = "dJointSetLMotorAxis")]
            public void SetAxis (int anum, int rel, Real x, Real y, Real z);

            [CCode (cname = "dJointSetLMotorParam")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointGetLMotorNumAxes")]
            public int GetNumAxes ( );

            [CCode (cname = "dJointGetLMotorAxis")]
            public void GetAxis (int anum, Vector3 result);

            [CCode (cname = "dJointGetLMotorParam")]
            public Real GetParam (int parameter);
        }

        [Compact]
        [CCode (cname="struct dxJoint", free_function="dJointDestroy")]
        public class Plane2D : Joint {
            [CCode (cname = "dJointCreatePlane2D")]
            public Plane2D (World world, JointGroup? group);

            [CCode (cname = "dJointSetPlane2DXParam")]
            public void SetXParam (int parameter, Real value);

            [CCode (cname = "dJointSetPlane2DYParam")]
            public void SetYParam (int parameter, Real value);

            [CCode (cname = "dJointSetPlane2DAngleParam")]
            public void SetAngleParam (int parameter, Real value);
        }
    }

    /***********************************************************************\
      collision.h                                                          */

    namespace geoms {
        public struct GeomClass {
            public int bytes;
            public GetColliderFnFn *collider;
            public GetAABBFn *aabb;
            public AABBTestFn *aabb_test;
            public DtorFn *dtor;
        }

        public int CreateGeomClass (ref GeomClass classptr);

        [Compact]
        [CCode (cname="struct dxGeom", cprefix="dGeom",
                free_function="dGeomDestroy")]
        public class Geom {
            [CCode (cname = "dCreateGeom")]
            public Geom (int classnum);
            [CCode (cname = "dCollide")]
            public int           Collide (Geom o2, int flags,
                                          ContactGeomArray contacts, int skip);
            public void*         GetClassData ( );
            public void          SetData (void *data);
            public void*         GetData ( );
            public void          SetBody (Body? body);
            public unowned Body? GetBody ( );
            [CCode (cname = "dBodyGetNextGeom")]
            public geoms.Geom?   GetNextGeom( );
            public void          SetPosition (Real x, Real y, Real z);
            public void          SetRotation (Matrix3 R);
            public void          SetQuaternion (Quaternion Q);
            public unowned Vector3 GetPosition ( );
            public void          CopyPosition (Vector3 pos);
            public unowned Matrix3 GetRotation ( );
            public void          CopyRotation (Matrix3 R);
            public void          GetQuaternion (Quaternion result);
            public void          GetAABB (AABB aabb);
            public int           IsSpace ( );
            public unowned spaces.Space? GetSpace ( );
            public int           GetClass ( );
            public void          SetCategoryBits (ulong bits);
            public void          SetCollideBits (ulong bits);
            public ulong         GetCategoryBits ( );
            public ulong         GetCollideBits ( );
            public void          Enable ( );
            public void          Disable ( );
            public int           IsEnabled ( );
            public void          SetOffsetPosition (Real x, Real y, Real z);
            public void          SetOffsetRotation (ref Matrix3 R);
            public void          SetOffsetQuaternion (ref Quaternion Q);
            public void          SetOffsetWorldPosition (Real x, Real y, Real z);
            public void          SetOffsetWorldRotation (ref Matrix3 R);
            public void          SetOffsetWorldQuaternion (ref Quaternion Q);
            public void          ClearOffset ( );
            public int           IsOffset ( );
            public unowned Real* GetOffsetPosition ( );
            public void          CopyOffsetPosition (Vector3 pos);
            public unowned Real* GetOffsetRotation ( );
            public void          CopyOffsetRotation (Matrix3 R);
            public void          GetOffsetQuaternion (Quaternion result);
            [CCode (cname="dSpaceCollide2")]
            public void          Collide2 (geoms.Geom other,
                                           [CCode (delegate_target_pos=0.9)]
                                           NearCallback callback);
        }

        [Compact]
        [CCode (cname="struct dxGeom", cprefix="dGeomSphere",
                free_function="dGeomDestroy")]
        public class Sphere : Geom {
            [CCode (cname = "dCreateSphere")]
            public Sphere (spaces.Space? space, Real radius);
            public void          SetRadius (Real radius);
            public Real          GetRadius ( );
            public Real          PointDepth (Real x, Real y, Real z);
        }

        [Compact]
        [CCode (cname="struct dxGeom", cprefix="dGeom",
                free_function="dGeomDestroy")]
        public class Convex : Geom {
            [CCode (cname = "dCreateConvex")]
            public Convex         (spaces.Space? space, Real[] _planes,
                                   Real[] _points, uint* _polygons);
            public void SetConvex (Real[] _planes, Real[] _points,
                                   uint *_polygons);
        }

        [Compact]
        [CCode (cname="struct dxGeom", cprefix="dGeomBox",
                free_function="dGeomDestroy")]
        public class Box : Geom {
            [CCode (cname = "dCreateBox")]
            public Box (spaces.Space? space, Real lx, Real ly, Real lz);
            public void SetLengths (Real lx, Real ly, Real lz);
            public void GetLengths (Vector3 result);
            public Real PointDepth (Real x, Real y, Real z);
        }

        [Compact]
        [CCode (cname="struct dxGeom", cprefix="dGeomPlane",
                free_function="dGeomDestroy")]
        public class Plane : Geom {
            [CCode (cname = "dCreatePlane")]
            public Plane (spaces.Space? space, Real a, Real b, Real c, Real d);
            public void SetParams  (Real a, Real b, Real c, Real d);
            public void GetParams  (Vector4 result);
            public Real PointDepth (Real x, Real y, Real z);
        }

        [Compact]
        [CCode (cname="struct dxGeom", cprefix="dGeomCapsule",
                free_function="dGeomDestroy")]
        public class Capsule : Geom {
            [CCode (cname = "dCreateCapsule")]
            public Capsule                (spaces.Space? space,
                                           Real radius, Real length);
            public void SetParams  (Real radius, Real length);
            public void GetParams  (out Real radius, out Real length);
            public Real PointDepth (Real x, Real y, Real z);
        }

        [Compact]
        [CCode (cname="struct dxGeom", cprefix="dGeomCylinder",
                free_function="dGeomDestroy")]
        public class Cylinder : Geom {
            [CCode (cname = "dCreateCylinder")]
            public Cylinder               (spaces.Space? space,
                                           Real radius, Real length);
            public void SetParams (Real radius, Real length);
            public void GetParams (out Real radius, out Real length);
        }

        [Compact]
        [CCode (cname="struct dxGeom", cprefix="dGeomRay",
                free_function="dGeomDestroy")]
        public class Ray : Geom {
            [CCode (cname = "dCreateRay")]
            public Ray                   (spaces.Space? space, Real length);
            public void SetLength     (Real length);
            public Real GetLength     ( );
            public void Set           (Real px, Real py, Real pz,
                                          Real dx, Real dy, Real dz);
            public void Get           (Vector3 start, Vector3 dir);
            public void SetParams     (int FirstContact, int BackfaceCull);
            public void GetParams     (out int* FirstContact,
                                          out int* BackfaceCull);
            public void SetClosestHit (int closestHit);
            public int  GetClosestHit ( );
        }

        [Compact]
        [CCode (cname="struct dxGeom", cprefix="dGeomTransform",
                free_function="dGeomDestroy")]
        public class Transform : Geom {
            [CCode (cname = "dCreateGeomTransform")]
            public Transform                (spaces.Space? space);

            public void SetGeom    (Geom obj);
            public Geom GetGeom    ( );
            public void SetCleanup (int mode);
            public int  GetCleanup ( );
            public void SetInfo    (int mode);
            public int  GetInfo    ( );
        }

        [Compact]
        [CCode (cname="struct dxGeom", cprefix="dGeom",
                free_function="dGeomDestroy")]
        public class Heightfield : Geom {
            [CCode (cname = "dCreateHeightfield")]
            public Heightfield              (spaces.Space? space,
                                             HeightfieldData data,
                                             int bPlaceable);
            public void SetHeightfieldData  (HeightfieldData d);
            public HeightfieldData GetHeightfieldData ( );
        }

        [Compact]
        [CCode (cname="struct dxHeightfieldData",
                cprefix="dGeomHeightfieldData",
                free_function="dGeomHeightfieldDataDestroy")]
        public class HeightfieldData {
            [CCode (cname = "dGeomHeightfieldDataCreate")]
            public HeightfieldData ( );
